--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "_packagemeta"]
-	path = _packagemeta
+[submodule "packagemeta"]
+	path = packagemeta
 	url = git@github.com:dskinner/PackageMeta.git
